// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the Home component renders with the right view for a logged in user 1`] = `
<section
  className="body_gradient home"
>
  <HomeBannerSection
    isAdmin={false}
    isLoggedIn={true}
    user={
      Object {
        "firstName": "Clinton",
        "lastName": "Agada",
      }
    }
  />
</section>
`;

exports[`Test the Home component renders without crashing for a guest 1`] = `
<section
  className="body_gradient home"
>
  <HomeBannerSection
    isAdmin={false}
    isLoggedIn={false}
    user={
      Object {
        "firstName": "Clinton",
        "lastName": "Agada",
      }
    }
  />
  <HomeContentSection />
</section>
`;
